--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@
 # Restrict to: HTTP referrers + Maps JavaScript API + Places API + Geocoding API + Maps Embed API
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=YOUR_CLIENT_SIDE_API_KEY_HERE
 
+# Google Maps Map ID (for Advanced Markers)
+# Create a Map ID in Google Cloud Console: https://console.cloud.google.com/google/maps-apis/studio/maps
+# Or use "DEMO_MAP_ID" for testing (Note: demo ID has limited features)
+NEXT_PUBLIC_GOOGLE_MAPS_MAP_ID=DEMO_MAP_ID
+
 # Server-side key (for Places API (New) calls from Next.js API routes)
 # Restrict to: IP addresses (or None for serverless) + Places API (New) only
 GOOGLE_MAPS_API_KEY=YOUR_SERVER_SIDE_API_KEY_HERE
